[package]
name = "nosni-proxy"
version = "0.3.3"
authors = ["quininer <quininer@live.com>"]
edition = "2018"
description = "No SNI"
license = "CC0-1.0"

[workspace]
members = [ "mitmca" ]

[dependencies]
once_cell = "1"
anyhow = "1"
futures = "0.3"
tokio-rustls = "0.24"
webpki-roots = "0.25"
hyper = { version = "0.14", features = [ "client", "server", "runtime", "http1", "http2" ] }
tokio = { version = "1", features = [ "full" ] }
percent-encoding = "2"
trust-dns-resolver = { version = "0.23.0", features = [ "dns-over-https-rustls" ] }
mitmca = { path = "mitmca" }

tower-layer = "0.3"
tower-util = "0.3"
tower-happy-eyeballs = { git = "https://github.com/quininer/tower-happy-eyeballs" }

rand = "0.8"
rcgen = "0.11"

argh = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"

[features]
default = [ "dnssec" ]
dnssec = [ "trust-dns-resolver/dnssec-ring" ]
