[package]
name = "nosni-check"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = [ "full" ] }
tokio-rustls = "0.22"
hyper = { version = "0.14", features = [ "client", "tcp", "http2" ] }
webpki-roots = "0.21"
